# akg-cli

./: .gitignore  README.md  akg_cli.py  pyproject.toml  requirements.txt
akg_cli_app/: __init__.py  api.py  chat.py  completer.py  panels.py
